[package]
name = "kvstore"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.7",features = ["macros"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

